# Little-Shader-Display

./: Cargo.toml  README.md  build.rs  deploy.sh  main.rs
bluetooth-accelerometer/: app.json  package-lock.json  package.json  tailwind.config.js
bluetooth-accelerometer/android/: settings.gradle
bluetooth-accelerometer/android/app/: build.gradle
bluetooth-accelerometer/android/app/src/main/: AndroidManifest.xml
bluetooth-accelerometer/android/app/src/main/java/com/bluetooth_app_raw/: MainActivity.kt  MainApplication.kt
bluetooth-accelerometer/android/app/src/main/res/values/: strings.xml
bluetooth-accelerometer/ios/: Podfile
bluetooth-accelerometer/ios/bluetooth_app_raw/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
bluetooth-accelerometer/ios/bluetooth_app_raw.xcodeproj/: project.pbxproj
bluetooth-accelerometer/ios/bluetooth_app_raw.xcodeproj/xcshareddata/xcschemes/: bluetooth_app_raw.xcscheme
bluetooth-accelerometer/ios/bluetooth_app_rawTests/: bluetooth_app_rawTests.m
bluetooth-accelerometer/src/: App.tsx  global.css
bluetooth-accelerometer/src/components/: Accelerometer.tsx  Bluetooth.tsx
little-shader-display/: .gitignore  Cargo.toml  deploy.sh
little-shader-display/res/shaders/compiled/: master.frag.spv  master.vert.spv
little-shader-display/res/shaders/uncompiled/: fractal.frag  grid.frag  mutation.frag  rings.frag  tilt.frag  waves.frag
little-shader-display/src/: bluetooth_server.rs  main.rs  renderer.rs  st7789_driver.rs
res/shaders/uncompiled/: circle.frag  fractal.frag  grid.frag  master.vert  mutation.frag  waves.frag
shaders/: master.frag
shaders/built/: master.frag.spv
src/: bluetooth_server.rs  file_watcher.rs  main.rs  raspberry_st7789_driver.rs  st7789_driver.rs
