[package]
name = "shader_editor_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shader-editor-rs"
path = "./src/main.rs"

[dependencies]
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
futures = "0.3.28"
wgpu = { version = "0.16.0", features = [ "spirv" ] }
winit = "0.28.6"
image = "0.25.2"

# ST7789
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.17.1", features = ["hal"] }
embedded-hal-bus = "0.2.0"
embedded-hal = "1.0.0"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.0"
