[package]
name = "little_shader_display"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "little-shader-display"
path = "./src/main.rs"

[dependencies]

# For renderer
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
futures = "0.3.28"
wgpu = { version = "0.16.0", features = [ "spirv" ] }
winit = "0.28.6"
image = "0.25.2"
libc = "0.2"

# For bluetooth server
bluer = { version = "0.17.3", features = ["full"] }
tokio = { version = "1", features = [ "io-std", "io-util", "rt-multi-thread", "signal", "net"] }
tokio-stream = { version = "0.1", optional = true }
env_logger = "0.11"

# ST7789
[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.19.0" 
st7789 = "0.6.0" 
display-interface-spi = "0.4.0"
embedded-graphics = "0.7"
embedded-hal = "0.2"
display-interface = "0.4"